[gd_scene format=3 uid="uid://be00j8kley42i"]

[ext_resource type="Script" uid="uid://bnide3da7pvhd" path="res://objects/ui/building_menu.gd" id="1_248l0"]

[sub_resource type="Gradient" id="Gradient_248l0"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.47600818, 0.4661615, 0.4807951, 0.46666667)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_auhnm"]
gradient = SubResource("Gradient_248l0")
width = 175

[node name="BuildingMenu" type="Control" unique_id=2115674862]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_248l0")
plot_spot = "shelter_2"

[node name="bg_color" type="TextureRect" parent="." unique_id=701569392]
unique_name_in_owner = true
custom_minimum_size = Vector2(185, 460)
layout_mode = 0
offset_right = 185.0
offset_bottom = 394.0
texture = SubResource("GradientTexture1D_auhnm")

[node name="MenuBox" type="VBoxContainer" parent="." unique_id=1843127713]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 94.0
offset_bottom = 67.0

[node name="Label" type="Label" parent="MenuBox" unique_id=1648398520]
unique_name_in_owner = true
layout_mode = 2
text = "Build menu"
horizontal_alignment = 1

[node name="CardBox" type="HBoxContainer" parent="MenuBox" unique_id=1571406248]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuBox" unique_id=1052998840]
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="MenuBox/HBoxContainer" unique_id=2140384785]
layout_mode = 2
text = "close"

[connection signal="pressed" from="MenuBox/HBoxContainer/Button" to="." method="_on_button_pressed"]
